fix sponsor card alignment

--- a/styles/index.css
+++ b/styles/index.css
@@ -49,7 +49,8 @@
 /* sponsored section */
 
 #sponsored-section .scroll-card {
-    flex: 0 0 calc(37.5vw - 0.75rem);
+    /* 75vw - 3rem */
+    flex: 0 0 calc(37.5vw - 1.5rem);
     box-sizing: border-box;
     height: 15rem;
     overflow: hidden;
@@ -79,7 +80,7 @@
 }
 
 #sponsored-section .info-area {
-    flex: 0 0 calc(37.5vw - 10.75rem);
+    flex: 0 0 calc(37.5vw - 11.5rem);
     padding: 1rem;
     padding-top: .5rem;
     box-sizing: border-box;
